@@ -68,6 +68,8 @@ Version 2.2.0
    - Feature: About dialog can be called from gnome applet menu
    - Cleanup: Translators tab in the preferences dialog
    - Bugfix: Obtaining option values from GUI
+   - Feature: Enabling/disabling the popup can be controlled via signals (see
+        debian bug #354383 by Eric Cooper)
  * Roland Stigge
    - Added reference to info pages in man page (Debian bug #335193)
 
